# jcal

./: .gitignore  README.md
.github/workflows/: build.yml  lint.yml
docs/: jalali.html  jcal.html  jdate.html  jstrftime.html  jstrptime.html
sources/: CONTRIBUTION.md  Makefile.am  README  TODO  autogen.sh  bootstrap.sh  configure.ac  vcs-to-changelog.py
sources/libjalali/: Makefile.am  jalali.c  jalali.h  jconfig.h  jtime.c  jtime.h
sources/man/: jcal.1  jctime.3  jdate.1  jstrftime.3  jstrptime.3
sources/src/: Makefile.am  jcal.c  jcal.h  jdate.c  jdate.h  strptime.c
sources/test_kit/jalali/: Makefile.am  elc.c  get_date.c  get_diff.c  jalali_update.c  jyinfo.c  leap.c  leap_range.c  sec_converter.c
sources/test_kit/jtime/: Makefile.am  jasctime.c  jctime.c  jgmtime.c  jlocaltime.c  jmktime.c  jstrftime.c  jstrptime.c
